--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,10 +1,11 @@
 @import "tailwindcss";
-@tailwind base;
-@tailwind components;
+/* @tailwind base; */
+/* @tailwind components; */
 @tailwind utilities;
 @import 'swiper/css';
 @import 'swiper/css/navigation';
 @import 'swiper/css/pagination';
+/* @import "tailwindcss/preflight"; */
 
 /* Custom font (optional) */
 /* @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap'); */
